# pdf-to-dicom

./: .flake8  .gitignore  CONVENTIONS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run-tests.sh
.github/workflows/: ci.yml
fixtures/: README.md  encapsulated_report.dcm
fixtures/metadata/: minimal_metadata.json  sample_metadata.json
src/dicom_pdf/: __init__.py  api.py  converter.py  main.py  models.py
src/pdf_to_dicom/: __init__.py  api.py  converter.py  main.py  models.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_converter.py  test_models.py
